updated login page, fixed mobile view not opening on IOS devices...

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@
 }
 .app__body{
   height: 90vh;  width: 90vw;
-  display: flex;
+  display: -webkit-box;   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: -webkit-flexbox; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   background-color: #ededed;
   box-shadow: -1px 4px 20px -6px rgba(0,0,0, 0.7);
 }
