--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -27,3 +27,9 @@
     background-color: #0b9c4f;
     color: white;
 }
+.sub__text{
+    margin-top: 1rem;
+    font-size: small;
+    font-weight: 500;
+    color: gray;
+}
