--- a/src/components/SidebarChat.css
+++ b/src/components/SidebarChat.css
@@ -1,7 +1,11 @@
 .sidebarChat{
     padding: 20px;
     cursor: pointer;
-    display: flex;
+    display: -webkit-box;   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+    display: -ms-flexbox;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+    display: -webkit-flexbox; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+    display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
     border-bottom: 1px solid #f6f6f6;
 }
 .sidebarChat:hover{
